// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with icon 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderWidth": 1,
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 4,
        },
        Object {
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        Object {
          "backgroundColor": "#158cba",
          "borderColor": "#158cba",
        },
        undefined,
        Object {},
      ]
    }
  >
    <View
      style={Object {}}
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "white",
              "fontSize": 16,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders correctly with text 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderWidth": 1,
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 4,
        },
        Object {
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        Object {
          "backgroundColor": "#158cba",
          "borderColor": "#158cba",
        },
        undefined,
        Object {},
      ]
    }
  >
    <Text>
      Lorem ipsum
    </Text>
  </View>
</View>
`;
